--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FTA_Ver-2",
-    "slug": "FTA_Ver-2",
+    "name": "FTA-Unifarm-Project_Base",
+    "slug": "FTA-Unifarm-Project_Base",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
