--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fta_ver-1",
+  "name": "fta-unifarm-project_base",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.2",
+    "@react-native/metro-config": "^0.73.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "^50.0.0",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-paper": "^5.12.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2"
   },
   "private": true
 }
