--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-swiper": "^1.6.0"
