--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.0",
     "expo-linear-gradient": "~12.7.2",
