--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/config": "^8.5.4",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -17,11 +18,11 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^50.0.0",
+    "expo": "~50.0.13",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.5",
     "react-native-paper": "^5.12.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -30,7 +31,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
