--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config": "^8.5.4",
+    "@expo/config": "~8.5.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
