--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "FTA-Unifarm-Project_Base",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/toppng.com-vegetables-images-png-vegetables-1911x1320.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/toppng.com-vegetables-images-png-vegetables-1911x1320.png",
