--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.13",
@@ -33,7 +34,9 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
