--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-date-picker": "^4.4.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
