--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/config": "~8.5.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-date-picker": "^4.4.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -34,9 +36,11 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
