--- a/app.json
+++ b/app.json
@@ -13,6 +13,12 @@
     },
     "assetBundlePatterns": ["**/*"],
     "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
     ],
     "ios": {
       "supportsTablet": true,
