--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.13",
     "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-date-picker": "^4.4.2",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.0",
     "react-native-safe-area-context": "4.8.2",
@@ -36,8 +38,7 @@
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-swiper": "^1.6.0",
-    "expo-location": "~16.5.5"
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
