--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/config": "~8.5.0",
+    "@expo/ngrok": "^2.5.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -20,12 +20,14 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.13",
+    "expo": "~50.0.15",
+    "expo-dev-client": "~3.3.11",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-date-picker": "^4.4.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2"
   },
