--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "~50.0.17",
     "expo-dev-client": "~3.3.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
@@ -27,14 +28,14 @@
     "@babel/core": "^7.20.0",
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.0.0",
+    "@expo/ngrok": "^4.1.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "globals": "^15.0.0",
-    "@expo/ngrok": "^4.1.0"
+    "globals": "^15.0.0"
   },
   "eslintConfig": {
     "extends": "plugin:react/recommended",
