--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/config": "~8.5.0",
     "@expo/ngrok": "^2.5.0",
+    "@joaosousa/react-native-progress-steps": "^0.4.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
@@ -25,6 +26,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -48,5 +50,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "expo-modules-core": "0.9.2",
+    "expo-modules-autolinking": "0.8.1"
+  }
 }
