--- a/app.json
+++ b/app.json
@@ -18,24 +18,18 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
-      ],
-      [
-        "@react-native-google-signin/google-signin",
-        {
-          "iosUrlScheme": "com.googleusercontent.apps.FTAUnifarm"
-        }
       ]
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.googleusercontent.apps.FTAUnifarm"
+      "bundleIdentifier": "com.apps.FTAUnifarm"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.googleusercontent.apps.FTAUnifarm",
+      "package": "com.apps.FTAUnifarm",
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
@@ -43,11 +37,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "6e27ac61-8341-43cb-b98c-bb2559177ad0"
-      }
     }
   }
 }
