--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@expo/ngrok": "^2.5.0",
     "@joaosousa/react-native-progress-steps": "^0.4.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-native/metro-config": "^0.73.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -39,6 +38,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-swipe-list-view": "^3.2.9",
@@ -49,6 +49,13 @@
     "@expo/ngrok": "^4.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "react-native-flipper"
+      ]
+    }
   },
   "private": true,
   "resolutions": {
